# 8_1_REST-API

./: .gitignore  README.md  data.json  main.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
tests/: classes.py  delete_api.py  get_api.py  post_api.py  put_api.py
